patient route updated and swagger
